--- a/draw_.ipynb
+++ b/draw_.ipynb
@@ -842,7 +842,7 @@
     "from func_loader import load_csv_history, load_history\n",
     "from func_draw import smooth_curve, draw_multi\n",
     "\n",
-    "eh_o = load_csv_history('./logs/newrw-0716\\snm_50_l9666.txt_c10_size_50_\\DQN_our_015_paper_full_new_norm/DQN_our_015_paper_full_new_norm_episode_immediate_reward.csv')\n",
+    "eh_o = load_csv_history('./logs/reward.csv')\n",
     "plt.plot(np.arange(len(eh_o)), eh_o, alpha=0.3, linestyle='-', color='C0', linewidth=1)\n",
     "plt.plot(np.arange(len(eh_o)), smooth_curve(eh_o), alpha=1, linestyle='-', color='C0', linewidth=1)\n",
     "# plt.plot(np.arange(len(eh_o)), smooth_curve(eh_o), label='our', alpha=1, linestyle='-', color='C0', linewidth=1)\n",
